--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -752,35 +752,23 @@
 			
 			private function onTreeKeyboardKeyUp(aKeyboardEvent:KeyboardEvent) : void
 			{
-				switch(aKeyboardEvent.keyCode)
+				if (tree.isCopyKeyCombination(aKeyboardEvent))
 				{
-					case Keyboard.C:
-					{
-						if (aKeyboardEvent.ctrlKey) {
-							if (!tree.selectedItem) {
-								return;
-							}
-							copyTreePages(XML(tree.selectedItem), !aKeyboardEvent.shiftKey);
-						}
-						break;
+					if (!tree.selectedItem) {
+						return;
 					}
-					case Keyboard.V:
-					{
-						if (aKeyboardEvent.ctrlKey) {
-							pasteTreePages();
-						}
-						break;
-					}
-					default:
-					{					
-						break;
-					}
+					
+					copyTreePages(XML(tree.selectedItem), !aKeyboardEvent.shiftKey);
+				
+					return;
 				}
-			}
-			
-			protected function tree_creationCompleteHandler(event:FlexEvent):void
-			{
-				tree.addEventListener(KeyboardEvent.KEY_UP, onTreeKeyboardKeyUp);
+				
+				if (tree.isPasteKeyCombination(aKeyboardEvent))
+				{
+					pasteTreePages();
+					return;
+				}
+				
 			}
 			
 			private function copyTreePages(pagesXml : XML, copyTree : Boolean = true):void
@@ -923,7 +911,9 @@
 								 themeColor="#000000" toolTip="{cmboxProduct.selectedItem.title}"/>
 
 				</mx:HBox>
-				<mx:Tree id="tree" width="100%" height="100%" color="#000000" showRoot="true" labelField="@title"
+				<view:HelpProductsTree id="tree" 
+						 width="100%" height="100%" 
+						 color="#000000" showRoot="true" labelField="@title"
 						 dragEnabled="true" dragMoveEnabled="true" dropEnabled="true"
 						 folderOpenIcon="@Embed('../assets/open_folder.png')"
 						 folderClosedIcon="@Embed('../assets/close_folder.png')"
@@ -931,7 +921,7 @@
 						 defaultLeafIcon="@Embed('../assets/page.png')" 
 						 dragDrop="dragDropHandler(event);"
 						 change="{treeChangeHandler(event)}"
-						 creationComplete="tree_creationCompleteHandler(event)"/>
+						 keyDown="onTreeKeyboardKeyUp(event)"/>
 
 				<mx:HBox paddingLeft="3">
 					<mx:Button label="Add Page"
