--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -29,12 +29,8 @@
 			<s:SolidColor color="#424242"/>
 		</s:fill>
 	</s:Rect>
-
-	<!--	<components:ScriptEditor id="scriptEditor"
-							 height="100%" width="100%"/>-->
 	
-	<components:WorkArea id="workArea"
-							 height="100%" width="100%"/>
+	<components:ScriptArea id="scriptArea" width="1000%" height="100%"/>
 	
 	<s:Rect width="8" height="100%">
 		<s:fill>
