Select used events and actions added
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8226 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
@@ -205,8 +205,8 @@
 				<s:Rect bottom="0" left="0" right="0" top="0">
 					<s:fill>
 						<s:LinearGradient rotation="90">
-							<s:GradientEntry color="0x86C617"/>
-							<s:GradientEntry color="0x478003"/>
+							<s:GradientEntry color="{ hostComponent.used ? 0xFF0000 : 0x86C617 }"/>
+							<s:GradientEntry color="{ hostComponent.used ? 0xFF0000 : 0x478003 }"/>
 						</s:LinearGradient>
 					</s:fill>
 				</s:Rect>
@@ -221,8 +221,8 @@
 					<s:Rect bottom="0" left="0" right="0" top="0">
 						<s:fill>
 							<s:LinearGradient rotation="90">
-								<s:GradientEntry color="0x86C617"/>
-								<s:GradientEntry color="0x478003"/>
+								<s:GradientEntry color="{ hostComponent.used ? 0xFF0000 : 0x86C617 }"/>
+								<s:GradientEntry color="{ hostComponent.used ? 0xFF0000 : 0x478003 }"/>
 							</s:LinearGradient>
 						</s:fill>
 					</s:Rect>
@@ -254,9 +254,9 @@
 						
 						<s:LinearGradient rotation="90">
 							
-							<s:GradientEntry color="0x86C617"/>
+							<s:GradientEntry color="{ hostComponent.used ? 0xFF0000 : 0x86C617 }"/>
 							
-							<s:GradientEntry color="0x478003"/>
+							<s:GradientEntry color="{ hostComponent.used ? 0xFF0000 : 0x478003 }"/>
 						</s:LinearGradient>
 						
 					</s:fill>
