--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -109,7 +109,10 @@
 				if ( !event.ctrlKey && event.target is Group && event.target.id == "scaleGroup" )
 				{
 					if ( !event.shiftKey )
+					{
 						hostComponent.removeAllSelectedElements();
+						hostComponent.clearUsedElements();
+					}
 					
 					var pt:Point;
 				
