--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionItemRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionItemRenderer.mxml
@@ -32,6 +32,11 @@
 				super.data = value;
 			}
 			
+			override public function get data() : Object
+			{
+				return super.data;
+			}
+			
 		]]>
 	</fx:Script>
 
