--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
@@ -19,11 +19,16 @@
 			import mx.utils.ObjectProxy;
 			
 			import net.vdombox.ide.common.events.PopUpWindowEvent;
+			import net.vdombox.ide.common.interfaces.IEventBaseVO;
+			import net.vdombox.ide.common.model._vo.EventVO;
 			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.common.view.components.windows.NameObjectWindow;
 			import net.vdombox.ide.modules.events.events.EventsPanelEvent;
+			import net.vdombox.ide.modules.events.view.components.BaseItemRenderer;
+			import net.vdombox.ide.modules.events.view.components.EventItemRenderer;
 			import net.vdombox.utils.WindowManager;
 			
+			import spark.events.IndexChangeEvent;
 			import spark.skins.spark.DefaultItemRenderer;
 
 			override protected function updateDisplayList( unscaledWidth : Number, unscaledHeight : Number ) : void
