--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
@@ -360,7 +360,8 @@
 			<mx:GridItem width="100%" height="100%">
 				<mx:TextInput width="300" id="txtInstallerId" 
 							  toolTip="{LanguageManager.sentences.template_ID_tooltip}"
-							  restrict="a-zA-Z0-9\-_()."/>
+							  restrict="a-zA-Z0-9\-."
+							  maxChars="212"/>
 			</mx:GridItem>
 		</mx:GridRow>
 		
