--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
@@ -250,7 +250,7 @@
 
 				valueField.initChars(uint( codeInterface[ "value" ] ),_attributeDescriptionVO);
 
-
+				valueField.addEventListener(Event.CHANGE, changeHandler, false, 0 , true );
 			}
 
 			private function eventCompleleHandler(event : Event) : void
