--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -2,10 +2,13 @@
 <s:MXTreeItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
 					  xmlns:s="library://ns.adobe.com/flex/spark"
 					  xmlns:mx="library://ns.adobe.com/flex/mx"
+					  xmlns:view="net.vdombox.view.*" 
+					  xmlns:view1="net.vdombox.ide.common.view.*" 
+					  xmlns:components="net.vdombox.ide.common.view.components.*"
 					  height="25"
 					  minWidth="200"
 					  contentBackgroundAlpha="0" 
-					  contextMenu="mxtreeitemrenderer1_contextMenuHandler(event)" xmlns:view="net.vdombox.view.*" xmlns:view1="net.vdombox.ide.common.view.*" xmlns:components="net.vdombox.ide.common.view.components.*">
+					  contextMenu="mxtreeitemrenderer1_contextMenuHandler(event)">
 
 	<s:states>
 		<s:State name="normal" />
